@@ -3,6 +3,7 @@ Version 1.3.0
 Added: support for more DEHEXTRA features: extra thing fields and extra sounds.
 Added: additional Doom Retro strings.
 Added: better Linux compatibility. The application starts and is somewhat usable, but a number of UI issues still prevent it from working well.
+Added: state preview now uses a state's unused 1 and 2 parameters as offsets if previewing a state from the weapons editor (right-click state label).
 Changed: engine table files can now include (base table) files. This leads to smaller filesizes and makes for easier updating. As a result of this, strings in the Doom 1.9 and Ultimate Doom 1.9 tables are now keyed by their index.
 Changed: engine table files list only fields used by that engine to reduce their size and improve maintainability. Default entries for things, states, weapons, ammo and sounds are provided for tables that extend existing ones.
 Changed: string editing for vanilla patches will allow any number of characters to be entered, but disallow using the new string if it is too long.
